# org-copilot

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-please.yml
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260326_0003_document_chunk_modality.py  20260401_0006_enterprise_acl.py  20260402_0007_sys_admin_catalog.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: acl_catalog.py  admin.py  auth.py  conversations.py  knowledge.py  router.py  user_models.py
backend/app/core/: config.py  request_context.py
backend/app/db/: session.py
backend/app/models/: entities.py
backend/app/services/: document_extract.py  embedding_index_state.py  image_ingest.py  ingestion.py  kb_purge.py  milvus_store.py  model_resolver.py  openai_compat.py  pdf_extract.py  permissions.py  rag_chat.py
backend/scripts/: milvus_acl_upgrade.py  sync_relational_data.py  verify_rag_context_budget.py
backend/tests/: test_permissions.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.vue  index.css  main.ts  vite-env.d.ts
frontend/src/api/: http.ts  sse.ts  types.ts
frontend/src/components/ai/: AiMarkdown.vue
frontend/src/layouts/: AppLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  readiness.ts
frontend/src/styles/: kb-theme.css  kb-utilities.css
frontend/src/utils/: chatError.ts
frontend/src/views/: AccountSettingsView.vue  ChatView.vue  ForgotPasswordView.vue  KnowledgeView.vue  LoginView.vue  ModelSettingsView.vue  RegisterView.vue  ResetPasswordView.vue
