[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "kb-copilot-backend"
version = "0.1.0"
description = "KB-Copilot FastAPI backend (RAG / knowledge base)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "sqlalchemy[asyncio]>=2.0.25",
    "aiomysql>=0.2.0",
    "pymysql>=1.1.0",
    "alembic>=1.13.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.0",
    "httpx>=0.26.0",
    "cryptography>=42.0.0",
    # 1.12+ 移除 client.search()，代码已改用 query_points；勿锁回旧版
    "qdrant-client>=1.12.0",
    "pypdf>=4.0.0",
    "python-dotenv>=1.0.0",
    "greenlet>=3.0.0",
    "fastembed>=0.3.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
# 知识库图片 OCR（PaddleOCR）；安装：uv sync --extra image
image = [
    "paddlepaddle>=2.6.0",
    "paddleocr>=2.7.0,<3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
